# shade

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  container.rs  credentials.rs  docker.rs  env.rs  env_vars.rs  main.rs  multiplexer.rs  repo_select.rs  shade_config.rs  shell_init.rs  slug.rs  tui.rs
src/keychain/: macos.rs  mod.rs
src/secret/: macos.rs  mod.rs
src/vcs/: git.rs  jj.rs  mod.rs
