[package]
name = "shade"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
dirs = "6"
jiff = "0.2"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"

[dev-dependencies]
tempfile = "3"
